unpackaged/objects/Current_products_used__c.object
<CustomObject>
  <description>Used at opportunities with record type Trials &amp; Tenders. Business need is to see which products are currently used with the doctor when the trial was set up.
Reason is to be able to see from which products the Contact should be converted from.</description>
  <fields>
    <fullName>Competitor_Product__c</fullName>
    <formula>Non_ERP_Product__r.Competitor_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Product</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Manufacturer__c</fullName>
    <formula>Non_ERP_Product__r.Manufacturer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Non_ERP_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates to a specific Non-ERP-Product record
Requirement was to use same values as on Product Profiling on Contact. Picklist field is not scalable for global solution and the actual products are too detailed (e.g. specific colours on the article)</description>
    <inlineHelpText>Please add the product currently in use</inlineHelpText>
    <label>Product</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Non_ERP_Products__c.Valid_in_my_Market__c</field>
        <operation>equals</operation>
        <value>True</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Non_ERP_Products__c</referenceTo>
    <relationshipLabel>Current products used</relationshipLabel>
    <relationshipName>Current_products_used</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Product_Category__c</fullName>
    <formula>Non_ERP_Product__r.Product_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>T35_name_UK__c</fullName>
    <formula>Non_ERP_Product__r.T35_Name_UK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T35 name (UK)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Trial_Tender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related the products used to a specific Trial</description>
    <label>Trial &amp; Tender</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Trials &amp; Tenders</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Current products used</relationshipLabel>
    <relationshipName>Current_products_used</relationshipName>
    <type>Lookup</type>
  </fields>
  <label>Current product used</label>
  <nameField>
    <displayFormat>{000000}</displayFormat>
    <label>Current products used Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Current products used</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>